<resources>

    <string name="app_name">PCRemote</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="remote">Remote</string>
    <string name="servers">Servers</string>
    <string name="preferences">Preferences</string>
    <string name="help">Help</string>
    <string name="addServer">Add Server</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="port">Port</string>
    <string name="add">Add</string>
    <string name="serverNameHint">The name that will be visible in your list of servers</string>
    <string name="serverAddressHint">The IP or DNS address of a PC you want to control</string>
    <string name="serverPortHint">The port used by the server installed on your PC</string>
    <string name="remove">Remove</string>
    <string name="info">Info</string>
    <string name="serverInfo">Server info</string>
	<string name="noServerSelected">No server has yet been selected</string>
    <string name="connecting">Connecting. Please wait...</string>
    <string name="connectionFail">Unable to connect to server</string>
    <string name="connected">Connected</string>
    <string name="mouseInfo">Slide to control cursor</string>
    <string name="connectionLost">Unable to communicate with the server</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="keyboard">Keyboard</string>
    <string name="mousepad">Mouse pad</string>
    <string name="media">Media</string>
    <string name="prev">Previous</string>
    <string name="next">Next</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="aboutText">Project created by Kamil Janowski in year 2012 as his Engineering Final Project.
        I know it might not look that perfect, but still, the important thing is that it actually works, right? :D</string>
    <string name="cursorSens">Cursor sensitivity</string>
    <string name="prefsStoreFail">Failed to store preferences</string>
    <string name="scrollSens">Scroll sensitivity</string>
    <string name="rightClickTime">Right click time</string>
    <string name="goToPresentation">Presentation</string>
    <string name="goToRemoteFileBrowser">File browser</string>
    <string name="downloadingDirectories">Downloading list of directories</string>
    <string name="failedDirectories">Failed to retrieve directory content</string>
    <string name="downloadingFile">Downloading file:</string>
    <string name="failedToDownloadFile">Failed to download file:</string>
    <string name="cancel">Cancel</string>
    <string name="receiveFail">Failed to receive message</string>
    <string name="fileSaveFail">Failed to save file</string>
    <string name="downloadComplete">Download complete</string>
    <string name="connectionRejected">Connection rejected</string>
    <string name="ok">OK</string>
    <string name="enterPassword">Enter password</string>
</resources>