<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" >
	
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/name"/>
	    <EditText 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/serverName"
	        android:hint="@string/serverNameHint"/>
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/address"/>
	    <EditText 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/serverAddress"
	        android:hint="@string/serverAddressHint"/>
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/port"/>
	    <EditText 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/serverPort"
	        android:inputType="numberSigned"
	        android:hint="@string/serverPortHint"
	        android:text="1234"/>
	
	</LinearLayout>
	
	<Button 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/add"
	    android:layout_gravity="bottom"
	    android:onClick="addServerClicked"
	    android:id="@+id/addServerButton"
	    />
	
</FrameLayout>