<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:gravity="right">
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keyboard"
            android:onClick="goToKeyboard"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/media"
            android:onClick="goToMedia"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goToPresentation"
            android:onClick="goToPresentation"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goToRemoteFileBrowser"
            android:onClick="goToRemoteFileBrowser"/>
            
    </LinearLayout>
    
    <pcremote.custom.MouseController
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/mouseController"/>

</LinearLayout>