<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/enterPassword"/>
    <EditText android:layout_width="match_parent"
        android:id="@+id/password"
    android:layout_height="wrap_content"/>
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    
	    <Button android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/ok"
	    android:layout_weight="1"
	    android:id="@+id/okButton"
	    />
	    
	    <Button android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/cancel"
	    android:layout_weight="1"
	    android:id="@+id/cancelButton" />"
    
    </LinearLayout>

</LinearLayout>